# councli

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: ADAPTERS.md  ADAPTER_CONTRACT.md  AGENT_LAUNCH_PROTOCOL.md  ARCHITECTURE.md  ARCHITECTURE_DECISIONS.md  COUNCIL_ROOM_MVP_PLAN.md  FABLE_MVP_CONSULT.md  INSTALL.md  OPERATIONS_MODEL.md  PACKAGING.md  PROTOCOL_DESIGN.md  RESEARCH_FINDINGS.md  ROADMAP.md  SECURITY_MIGRATIONS.md  SECURITY_MODEL.md  STATE_CONCURRENCY.md  SYSTEMS_REVIEW.md  TERMINAL_SUBSTRATE.md
src/councli/: __init__.py  __main__.py  agents.py  artifacts.py  cli.py  config.py  council.py  events.py  gitops.py  hook.py  native.py  prompt_pack.py  protocol.py  rawlog.py  schema.py
src/councli/schemas/: __init__.py  decision.schema.json  event.schema.json  participants.schema.json  request.schema.json  response.schema.json  review.schema.json  vote.schema.json
tests/: test_event_architecture.py
