[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "councli"
version = "0.1.0"
description = "A local consensus layer for multiple coding CLI agents."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "jinja2>=3.1.0",
  "pydantic>=2.7.0",
  "pyyaml>=6.0.0",
  "rich>=13.7.0",
  "typer>=0.12.0",
]

[project.scripts]
councli = "councli.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/councli"]
